[package]
name = "rsamixed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.release]
debug = true


[dependencies]
num-bigint = { version = "0.2.2", features = ["rand"] }
num-traits = "0.2.16"
num-integer ="*" 
rand = "0.6"    
clap = { version = "4.4.4", features = ["derive"] }
toml = "0.8.1"
#serde = { version = "1.0.188", features = ["derive"] }
pem = "3.0.2"
